# UOSM-Telemetry-Pico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  pico-debug.cfg
Core/Inc/: DataAggregator.h  FreeRTOSConfig.h  Modem.h  RTOS.h  Sleep.h  UOSMCoreConfig.h  accelerometer.h  current_sensor.h  data_aggregator.h  i2c.h  interrupts.h  lwipopts.h  modem.h  mqtt.h  mqtt_pal.h  sd_config.h  voltage_sensor.h
Core/Src/: DataAggregator.c  data_aggregator.c  i2c.c  interrupts.c  main.c
Core/Tasks/: Accelerometer.c  Accelerometer.h  AccelerometerTask.c  AccelerometerTask.h  CurrentSensorTask.c  CurrentVoltageTask.cpp  CurrentVoltageTask.h  DetectBreaksTask.c  DetectBreaksTask.h  InternalCommsTask.c  InternalCommsTask.h  LoggingTask.c  LoggingTask.h  NetworkTask.c  NetworkTask.h  SpeedometerTask.c  SpeedometerTask.h  StatusTask.c  StatusTask.h  TaskManager.c  TaskManager.h  VoltageSensorTask.c  VoltageSensorTask.h
Core/UserDrivers/: Modem.c  Print.c  accelerometer.c  accelerometer_adafruit.c  current_sensor.c  modem.c  mqtt.c  mqtt_pal.c  sd_config.c
Drivers/: BackupRegister.h
FREERTOS_KERNEL/: Makefile  cmake_install.cmake
Modules/: InternalCommsModule.h
UOSM-Core/: README.md
UOSM-Core/Drivers/: BackupRegister.c  CANDriver.c  CANDriver.h
UOSM-Core/Inc/: ApplicationTypes.h
UOSM-Core/Modules/: CANMessageLookUpModule.c  CANMessageLookUpModule.h  InternalCommsModule.c
UOSM-Core/Utils/: Observable.hpp
elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
include/: UOSMCoreConfig.h
